[package]
name = "lu-formats"
version = "0.1.0"
edition = "2021"

[features]
nom = ["dep:nom"]
serde = ["dep:serde"]
json = ["dep:serde_json"]
default = ["nom", "serde"]

[dependencies]
nom = { version = "7.1.3", optional = true }
serde = { version = "1.0.174", optional = true, features = ["derive"] }
serde_json = { version = "1.0.103", optional = true }

[build-dependencies]
serde_yaml = "0.9.16"
abbau-codegen-quote = { git = "https://github.com/LUDevNet/abbau", rev = "1f61440" }
quote = "1.0.23"

[[bin]]
name = "lump"
required-features = ["json"]
